Added javadoc comments to the methods in BaseMapper and SimpleMapper.